tests/fail/semantics/invalid_main_signature/main.kira
@Main
function entry(value: Int) {
    return;
}
